@@ -1,7 +1,7 @@
       logical function pre_rename(lfnout,lprint,ffield,
      + lseq,cseq,mseq,nseq,latm,catm,matm,natm)
 c
-c $Id: pre_rename.F,v 1.1 1998-06-03 14:36:37 d3j191 Exp $
+c $Id: pre_rename.F,v 1.2 1998-06-04 22:28:38 d3j191 Exp $
 c
 c     function to comply with ffield segment names
 c
@@ -22,6 +22,33 @@ c
     1 continue
 c
       if(ffield(1:5).eq.'amber') then
+      do 2 i=1,natm
+      if(cseq(1,latm(1,i))(1:3).eq.'HIS'.and.catm(2,i).eq.' HD1  ')
+     + cseq(2,i)(1:3)='HID'
+      if(cseq(1,latm(1,i))(1:3).eq.'HIS'.and.catm(2,i).eq.' HE2  ')
+     + cseq(2,i)(1:3)='HIE'
+      if(cseq(1,latm(1,i))(1:3).eq.'HID'.and.catm(2,i).eq.' HE2  ')
+     + cseq(2,i)(1:3)='HIP'
+      if(cseq(1,latm(1,i))(1:3).eq.'HIE'.and.catm(2,i).eq.' HD1  ')
+     + cseq(2,i)(1:3)='HIP'
+      if(cseq(1,latm(1,i))(1:3).eq.'CYS'.and.lseq(4,latm(1,i)).ne.0)
+     + cseq(2,i)(1:3)='CYX'
+    2 continue
+      endif
+c
+      if(ffield(1:5).eq.'charm') then
+      do 3 i=1,natm
+      if(cseq(1,latm(1,i))(1:3).eq.'HIS'.and.catm(2,i).eq.' HD1  ')
+     + cseq(2,i)(1:3)='HSD'
+      if(cseq(1,latm(1,i))(1:3).eq.'HIS'.and.catm(2,i).eq.' HE2  ')
+     + cseq(2,i)(1:3)='HSE'
+      if(cseq(1,latm(1,i))(1:3).eq.'HID'.and.catm(2,i).eq.' HE2  ')
+     + cseq(2,i)(1:3)='HSP'
+      if(cseq(1,latm(1,i))(1:3).eq.'HIE'.and.catm(2,i).eq.' HD1  ')
+     + cseq(2,i)(1:3)='HSP'
+      if(cseq(1,latm(1,i))(1:3).eq.'CYS'.and.lseq(4,latm(1,i)).ne.0)
+     + cseq(2,i)(1:3)='CYX'
+    3 continue
       endif
 c
       pre_rename=.true.
